resources/wikia/ui_components/dropdown_navigation/css/dropdownNavigation.scss
@import 'skins/shared/mixins/arrow';
@import 'skins/shared/color';
@import 'extensions/wikia/Venus/styles/variables';

$dropdown-width: 200px;
$dropdown-item-padding: 10px;
$cover: $color-page;
$cover-transparent: rgba($cover, 0);
$shadow-transparent: rgba($color-text, 0);
$shadow: rgba($color-text, 0.2);

.wikia-dropdown-nav-wrapper {
	visibility: hidden;
	font-size: 14px;
	line-height: 20px;
	position: absolute;
	top: 0;
	text-align: left;
	width: $dropdown-width * 2;

	.active > & {
		visibility: visible;
	}
}

.wikia-dropdown-nav-sections-wrapper,
.wikia-dropdown-nav-subsections-wrapper {
	background-color: $color-page;
	box-sizing: border-box;
	float: left;
	overflow: hidden;

	.scrollable {
		background:
			/* Shadow covers */
			linear-gradient($cover 30%, $cover-transparent),
			linear-gradient($cover-transparent, $cover 70%) 0 100%,

			/* Shadows */
			linear-gradient($shadow 30%, $shadow-transparent),
			linear-gradient($shadow-transparent, $shadow 70%) 0 100%;

		background:
			/* Shadow covers */
			linear-gradient($cover 30%, $cover-transparent),
			linear-gradient($cover-transparent, $cover 70%) 0 100%,

			/* Shadows */
			linear-gradient($shadow 30%, $shadow-transparent),
			linear-gradient($shadow-transparent, $shadow 70%) 0 100%;

		background-attachment: local, local, scroll, scroll;
		background-color: $cover;
		background-repeat: no-repeat;
		background-size: 100% 40px, 100% 40px, 100% 4px, 100% 4px;
		box-sizing: content-box;
		overflow-y: auto;
		overflow-x: hidden;
		padding-right: 30px;
		width: inherit;
	}
}

.wikia-dropdown-nav-sections-wrapper,
.wikia-dropdown-nav-subsections-wrapper {
	border: 1px solid $color-page-border-subtle;
}

.wikia-dropdown-nav-subsections-wrapper {
	display: none;
	border-left: none;

	&.active {
		display: block;
	}
}

.wikia-dropdown-nav {
	box-sizing: border-box;
	list-style-type: none;
	margin: 0;
	padding: 0;
	width: inherit;

	.wikia-dropdown-nav-subsections-wrapper & {
		display: none;

		&.active {
			display: block
		}

		a:hover {
			background-color: $color-links;
			color: $color-page;
		}
	}
}

.wikia-dropdown-nav-item {
	&:not(:first-child) {
		border-top: 1px solid $color-page-border-subtle;
	}

	a {
		display: block;
		overflow: hidden;
		padding: $dropdown-item-padding;
		position: relative;
		text-decoration: none;
		text-overflow: ellipsis;
		white-space: nowrap;
	}

	&.active a {
		background-color: $color-links;
		color: $color-page;
	}

	&[data-id] a {
		padding-right: $dropdown-item-padding * 3;

		&:after {
			@include arrow(4px, $color-links, 'right');
			content: '';
			position: absolute;
			right: $dropdown-item-padding;
			top: 19px
		}
	}

	&.active[data-id] a:after {
		@include arrow(4px, $color-page, 'right');
	}
}

